Removed tab from configuration

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ members:
   - name: Urs Enzler
     jobtitle: Senior Software Architect
     description:
+    email:
   - name: Daniel Marbach
     jobtitle: Senior Developer
-    description:	
+    description:
+    email:
