updated team page

--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ members:
   - name: Urs Enzler
     jobtitle: Senior Software Architect
     description: The driver who stears Appcceleration on the ideal line for maximum appcceleration.
-    image: img/placeholders/team-member.jpg
+    image: img/ursenzler.png
     twitter: ursenzler
     github: ursenzler	
   - name: Daniel Marbach
