--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,9 @@ navigation:
           - name: AsyncWorker
             link: asyncworker.html
       - name: State Machine
-        link: statemachine.html			
+        link: statemachine.html	
+      - name: Road Map
+        link: roadmap.html	  
   - name: Donators
     description: Who supports appcceleration
     link: donators.html
