Updated philipp dolders description

--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,6 @@ members:
     github: danielmarbach
   - name: Philipp Dolder
     jobtitle: Senior Developer
-    description: Geile Siech
+    description: The integration master who appccelerates our build infrastructure continuously
     image: img/placeholders/team-member.jpg
     github: philippdolder
