updated team page

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ navigation:
 #   stumbleupon:
 members:
   - name: Urs Enzler
-    jobtitle: Senior Software Architect
+    jobtitle: Lead Software Architect
     description: The driver who stears Appcceleration on the ideal line for maximum appcceleration.
     image: img/ursenzler.png
     twitter: ursenzler
