--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,9 @@ navigation:
       - name: Distributed Event Broker
         link: distributedeventbroker.html		
       - name: Mapping Event Broker
-        link: mappingeventbroker.html			
+        link: mappingeventbroker.html
+      - name: Scoping Event Broker
+        link: scopingeventbroker.html
       - name: Evaluation Engine
         link: evaluationengine.html	
       - name: IO
